More fixes on mobile title

--- a/style.scss
+++ b/style.scss
@@ -220,7 +220,8 @@ img {
 
     @include mobile {
       font-size: 28px;
-      padding-top: 100px;
+      padding-top: 110px;
+      text-align: right;
     }
   }
 
